syntax="proto3";

package example;

service ExampleService{
    rpc GetName(GetNameRequest) returns (GetNameResponse){};
}

message GetNameRequest{
    string name=1;
    int32 age=2;
}

message GetNameResponse{
    string name=1;
    int32 age=2;
}